--- a/templates/base.twig
+++ b/templates/base.twig
@@ -5,7 +5,7 @@
 
 
 {% block page_main %}
-    <link href="{{ webpath }}/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/{{ webpath }}/styles.css" />
 
 <div class="stats">
     {% if token is json %}
@@ -65,10 +65,10 @@
         <p>{{token}}</p>
     {%endif%}
 </div>
-    <script src="{{ webpath }}/es6-promise.min.js" type="text/javascript"></script>
-    <script src="{{ webpath }}/active-users.js" type="text/javascript"></script>
-    <script src="{{ webpath }}/date-range-selector.js" type="text/javascript"></script>
-    <script src="{{ webpath }}/moment-with-locales.min.js" type="text/javascript"></script>
-    <script src="{{ webpath }}/Chart.min.js" type="text/javascript"></script>
-    <script src="{{ webpath }}/googleanalytics.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/es6-promise.min.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/active-users.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/date-range-selector.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/Chart.min.js" type="text/javascript"></script>
+    <script src="/{{ webpath }}/googleanalytics.js" type="text/javascript"></script>
 {% endblock %}
