Fix #18 : First panel is only display

--- a/templates/widget.twig
+++ b/templates/widget.twig
@@ -11,7 +11,7 @@
             <p><span id="active-users-container"></span></p>
         </div>
         {% if statisticspage %}
-            <div class="btn btn-secondary" href="{{ path('displayStatistics') }}">More statistics</div>
+            <a class="btn btn-secondary" href="{{ path('displayStatistics') }}">More statistics</a>
         {% endif %}
     </div>
 </div>
