Modified googleanalytics.js: on sites with no traffic response.rows will be undefined, giving us a TypeError: 'forEach' of undefined" in renderTopCitiesChart, renderNewReturningChart and renderMobileChart. Fixed by checking rows length and printing a grey doughnut chart with the label "No data" if empty.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -60,6 +60,7 @@
                 computer: "{{ __("Computer") }}",
                 tablet: "{{ __("Tablet") }}",
                 phone: "{{ __("Phone") }}",
+                nodata: "{{ __("No data") }}",
                 months_jan: "{{ __("Months.Jan") }}",
                 months_feb: "{{ __("Months.Feb") }}",
                 months_mar: "{{ __("Months.Mar") }}",
