--- a/templates/normal.twig
+++ b/templates/normal.twig
@@ -3,6 +3,9 @@
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', '{{ webproperty }}']);
     _gaq.push(['_setDomainName', '{{ domainname }}']);
+    {% if anonymize_ip is true %}
+    _gaq.push (['_gat._anonymizeIp']);
+    {% endif %}
     _gaq.push(['_trackPageview']);
 
     (function() {
