--- a/templates/universal.twig
+++ b/templates/universal.twig
@@ -5,5 +5,8 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', '{{ webproperty }}', '{{ domainname }}');
+    {% if anonymize_ip is true %}
+    ga('set', 'anonymizeIp', true);
+    {% endif %}
     ga('send', 'pageview');
 </script>
