--- a/templates/universal.twig
+++ b/templates/universal.twig
@@ -5,7 +5,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', '{{ webproperty }}', '{{ domainname }}');
-    {% if anonymize_ip %}
+    {% if anonymize_ip|default() %}
     ga('set', 'anonymizeIp', true);
     {% endif %}
     ga('send', 'pageview');
